# xdwa_local_planner

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugins_description.xml
include/xdwa_local_planner/: costmap_score_function.h  goal_dist_score_function.h  line_iterator.h  trajectory.h  trajectory_generator.h  trajectory_score_function.h  trajectory_scorer.h  velocity_sample.h  xdwa_local_planner.h
launch/: xdwa_local_planner.launch.py
plugins/: costmap_score_function.cpp  goal_dist_score_function.cpp
src/: costmap_score_function.cpp  trajectory.cpp  trajectory_generator.cpp  trajectory_scorer.cpp  velocity_sample.cpp  xdwa_local_planner.cpp  xdwa_local_planner_node.cpp
